--- a/product-service-dev.properties
+++ b/product-service-dev.properties
@@ -1,4 +1,4 @@
 spring.application.name=PRODUCT-SERVICE
 server.port=8383
 product.id=PID-1003
-product.name=Dell Laptop
+product.name=Dell Laptop 1
