--- a/product-service-dev.properties
+++ b/product-service-dev.properties
@@ -1,4 +1,4 @@
 spring.application.name=PRODUCT-SERVICE
 server.port=8383
-product.id=PID-1003
-product.name=Lenovo Laptop 1.0
+product.id=DELL-D500
+product.name=Dell Model D500
